--- a/views/webinars-detail.liquid
+++ b/views/webinars-detail.liquid
@@ -41,10 +41,10 @@
             </details>
     </section>
 
-    <section class="web-detail-geheel-q-en-a">
+    <section class="webinar-detail-q-en-a">
     <h2>Q & A</h2>
         <h3>Comments</h3>
-        <section class="web-detail-comments">
+        <section class="webinar-detail-comments">
             {% for comment in comments %} 
                     <p class="comment"> {{  comment.content }}</p>
             {% endfor %}  
