--- a/views/speakers.liquid
+++ b/views/speakers.liquid
@@ -43,5 +43,6 @@
         </section>
     </main>
 
-    {% comment %} {% include "partials/footer.liquid" %} {% endcomment %}
+    <script src="/script-speaker.js"></script>
+    
 {% render "partials/foot.liquid" %}
