--- a/views/speakers-detail.liquid
+++ b/views/speakers-detail.liquid
@@ -17,15 +17,27 @@
                     </div>
 
                     <!-- Bookmark formulier -->
-                    <form method="post" class="speaker-bookmark">
+                    <form method="post" action="/speakers/{{ speaker.slug }}" class="speaker-bookmark" data-enhanced="form-{{ speaker.id }}">
                         <input type="hidden" name="textField" value="{{ speaker.id }}">
-                        <button type="submit" class="button-green button-speaker-bookmark components-alignment-horizontal">
-                            <span>Bookmark speaker</span>
-                            {% render "public/assets-speaker/bookmark-icon.liquid" %}
-                        </button>
+                        <input type="hidden" name="forField" value="Bookmark for Julia">
+                        <input type="hidden" name="_method" value="{% if isBookmarked %}DELETE{% else %}POST{% endif %}">
+
+                        {% if isBookmarked %}
+                            <button type="submit" class="button-green button-bookmarked button-speaker-bookmark components-alignment-horizontal">
+                                <span>Bookmarked</span>
+                                {% render "public/assets-speakers/bookmark-icon.liquid" %}
+                            </button>
+                        {% else %}
+                            <button type="submit" class="button-green button-speaker-bookmark components-alignment-horizontal">
+                                <span>Bookmark speaker</span>
+                                {% render "public/assets-speakers/bookmark-icon.liquid" %}
+                            </button>
+                        {% endif %}
                     </form>
                 </div>
             </section>
+
+
 
             <section class="speaker-about">
                 <div class="speaker-section-title">
