--- a/views/index.liquid
+++ b/views/index.liquid
@@ -38,7 +38,7 @@
                         <source srcset="" type="">
                         <img src="assets-home/judie-van-driesen.png" alt="" loading="lazy">
                     </picture>
-                    <p>Judie van Driesen</p>
+                    <p><strong>Judie van Driesen</strong></p>
                     <p>Radiation oncologist</p>
                 </div> 
 
@@ -47,7 +47,7 @@
                         <source srcset="" type="">
                         <img src="assets-home/judie-van-driesen.png" alt="" loading="lazy">
                     </picture>
-                    <p>Judie van Driesen</p>
+                    <p><strong>Judie van Driesen</strong></p>
                     <p>Radiation oncologist</p>
                 </div>
 
@@ -56,7 +56,7 @@
                         <source srcset="" type="">
                         <img src="assets-home/judie-van-driesen.png" alt="" loading="lazy">
                     </picture>
-                    <p>Judie van Driesen</p>
+                    <p><strong>Judie van Driesen</strong></p>
                     <p>Radiation oncologist</p>
                 </div>
 
