--- a/public/styles/pleasureble-ui-anouk.css
+++ b/public/styles/pleasureble-ui-anouk.css
@@ -12,4 +12,9 @@
         background-color: var(--primary-dark);
         color: var(--secondary-text);
     }
+
+    &:focus {
+        outline: 2px solid;
+        outline-offset: .2em;
+    }
 }
