#59 Intersection observer toegevoegd
Werkt naar behoren.

--- a/public/styles/stylesheet.css
+++ b/public/styles/stylesheet.css
@@ -148,3 +148,12 @@ a {
         color: var(--primary-highlight);
     }
 
+
+.menu {
+  translate:0 100%;
+   transition: .2s;
+}
+
+.uitbeeld .menu {
+  translate:0 0%;
+}
