--- a/public/styles/header.css
+++ b/public/styles/header.css
@@ -1,6 +1,7 @@
 .main-header {
     width: 100%;
     display: flex;
+    transition: .3s ease-in-out;
 
     @media screen and (min-width: 1020px) {
         position: sticky;
@@ -145,7 +146,7 @@
     }
 
     .nav-logo-mobile {
-        position: sticky;
+        position: fixed;
         top: 0;
         background-color: var(--primary-dark);
         width: 100%;
@@ -154,6 +155,7 @@
         justify-content: center;
         align-items: center;
         border-radius: 0 0 1em 1em;
+        transition: .3s ease-in-out;
 
         @media screen and (min-width: 1020px) {
             display: none;
@@ -164,4 +166,10 @@
             height: auto;
         }
     }
+}
+
+/* Animatie header */
+.hide-menu {
+    translate: 0 -100%;
+    transition: .3s ease-in-out;
 }
