--- a/views/speakers.liquid
+++ b/views/speakers.liquid
@@ -43,6 +43,6 @@
         </section>
     </main>
 
-    <script src="/script-speaker.js"></script>
+    <script src="/script-speaker.js" type="module"></script>
     
 {% render "partials/foot.liquid" %}
