--- a/views/speakers-detail.liquid
+++ b/views/speakers-detail.liquid
@@ -18,7 +18,41 @@
 
                 <div class="speaker-picture-bookmark components-alignment-vertical">
                     <div class="speaker-picture">
-                        <img src="https://fdnd-agency.directus.app/assets/{{ speaker.profile_picture }}" width="200" height="200" alt="" style="object-fit:cover;">
+                        <!-- picture element voor responsive images -->
+                        <!-- in srcset worden afbeeldingen ingeladen van verschillende formats en breedtes -->
+                        <!-- in sizes wordt breedte gekozen en afbeelding geselecteerd -->
+                        <picture>
+                            <source
+                                srcset="
+                                    https://fdnd-agency.directus.app/assets/{{ speaker.profile_picture }}?format=avif&width=100&height=100 100w,   
+                                    https://fdnd-agency.directus.app/assets/{{ speaker.profile_picture }}?format=avif&width=200&height=200 200w,   
+                                    https://fdnd-agency.directus.app/assets/{{ speaker.profile_picture }}?format=avif&width=300&height=300 300w,   
+                                    https://fdnd-agency.directus.app/assets/{{ speaker.profile_picture }}?format=avif&width=400&height=400 400w   
+                                "
+                                sizes="
+                                    (max-width: 100px) 100px,
+                                    (max-width: 200px) 200px,
+                                    (max-width: 300px) 300px,
+                                    (max-width: 400px) 400px
+                                "
+                            />
+                            <source
+                                srcset="
+                                    https://fdnd-agency.directus.app/assets/{{ speaker.profile_picture }}?format=webp&width=100&height=100 100w,   
+                                    https://fdnd-agency.directus.app/assets/{{ speaker.profile_picture }}?format=webp&width=200&height=200 200w,   
+                                    https://fdnd-agency.directus.app/assets/{{ speaker.profile_picture }}?format=webp&width=300&height=300 300w,   
+                                    https://fdnd-agency.directus.app/assets/{{ speaker.profile_picture }}?format=webp&width=400&height=400 400w   
+                                "
+                                sizes="
+                                    (max-width: 100px) 100px,
+                                    (max-width: 200px) 200px,
+                                    (max-width: 300px) 300px,
+                                    (max-width: 400px) 400px
+                                "
+                            />     
+                            <!-- fallback image met goed ondersteund format (jpg) -->           
+                            <img src="https://fdnd-agency.directus.app/assets/{{ speaker.profile_picture }}?format=jpg" alt="" width="200" height="200" style="object-fit:cover;">
+                        </picture>
                     </div>
 
                     <!-- Bookmark formulier -->
