--- a/public/styles/scroll-driven-cards.css
+++ b/public/styles/scroll-driven-cards.css
@@ -1,7 +1,9 @@
-@media (prefers-reduced-motion: no-preference) {
-    .speakers-container article, .webinar-cards li {
-        animation: linear animate-in;
-        animation-timeline: view();
+@supports (animation-timeline: view()) {
+    @media (prefers-reduced-motion: no-preference) {
+        .speakers-container article, .webinar-cards li {
+            animation: linear animate-in;
+            animation-timeline: view();
+        }
     }
 }
 
