#49 prefers reduced motion page scroll

--- a/public/styles/page-scroll.css
+++ b/public/styles/page-scroll.css
@@ -1,12 +1,14 @@
-@media (max-width: 1020px) {
-    .main-header .menu {
-        position: fixed; 
-        bottom: 0; 
-        translate: 0 100%;
-        transition: .3s ease-out; 
-    }
-    
-    .offscreen .main-header .menu {
-        translate: 0% 0%;
+@media (prefers-reduced-motion: no-preference) {
+    @media (max-width: 1020px) {
+        .main-header .menu {
+            position: fixed; 
+            bottom: 0; 
+            translate: 0 100%;
+            transition: .3s ease-out; 
+        }
+        
+        .offscreen .main-header .menu {
+            translate: 0% 0%;
+        }
     }
 }
