#49 basic multi page view transition

--- a/public/styles/scroll-driven-cards.css
+++ b/public/styles/scroll-driven-cards.css
@@ -1,3 +1,7 @@
+@view-transition {
+    navigation: auto;
+}
+
 @supports (animation-timeline: view()) {
     @media (prefers-reduced-motion: no-preference) {
         .speakers-container article, .webinar-cards li {
