:focus state toegevoegd button #49

--- a/public/styles/button-amber.css
+++ b/public/styles/button-amber.css
@@ -44,3 +44,7 @@
 .button-animated-amber:active {
     border: solid 2px var(--primary-highlight);
 }
+
+.button-animated-amber:active {
+    border: solid 2px var(--primary-highlight);
+}
